Added post install script to run VS code

--- a/environment/Dockerfile
+++ b/environment/Dockerfile
@@ -1,4 +1,4 @@
-# hash:sha256:f8d8b3bb761184d71c28f1ba40f41fafe7589fdf5d43db6cd37715595660270a
+# hash:sha256:ff80fbe31b5f16550d67ddf5f9adb97dda9a5beb185c10da6bfa9fc6171b4610
 ARG REGISTRY_HOST
 FROM $REGISTRY_HOST/codeocean/mambaforge3:23.1.0-4-python3.10.12-ubuntu22.04
 
@@ -10,7 +10,7 @@ COPY git-askpass /
 
 RUN apt-get update \
     && apt-get install -y --no-install-recommends \
-        build-essential \
+        build-essential=12.9ubuntu3 \
     && rm -rf /var/lib/apt/lists/*
 
 RUN conda install -y \
@@ -23,3 +23,6 @@ RUN pip install -U --no-cache-dir \
     matplotlib==3.10.3 \
     pandas==2.3.0 \
     pynwb==3.0.0
+
+COPY postInstall /
+RUN /postInstall
