Update gitignore and wkshp 1 analysis

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /scratch/
 metadata/metadata.yml
 /code/Workshop_2_previous_year.ipynb
+/code/random_code_snippets.ipynb
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
